update team page to be more credible looking for marketing

--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
 			
 			<div class="align-justify">
 				<p>
-					We are a team of AI engineers, mobile web app developers, and medical professionals. 
-					All of us are volunteers and most of us are passionate students under 30. 
-					From our hearts, we just want to do our best to help the situation and can’t think of anything more noble. 
-					We are supported by faculty and professors at our universities.
+					We are a passionate team of AI engineers, mobile web app developers, and medical professionals. 
+					All 16 of us are volunteers and most of us are students under 30. 
+					From our hearts, we want to do our best to help the situation and can’t think of anything more noble. 
+					We are supported by faculty and professors at our universities, including Stanford (Medicine/AI),
+					NED University of Engineering and Technology, and Dow University of Health Sciences.
 				</p>
 			</div>
 
@@ -179,81 +180,13 @@
 				<!-- Join Team -->
 				<div class="col">
 					<!-- <h3>Join</h3> -->
-					<h3>We're always happy to welcome new volunteers to our team.</h3>
+					<h3>Volunteer</h3>
 					<a class="button" style="margin-top: 5vh" href="./join.html">Join Us</a>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<!-- Three -->
-	<section id="four" class="wrapper align-center inner">
-		<div>
-			<header id="collaborators">
-				<h1>Our Collaborators</h1>
-				<h3>In collaboration with Silicon Valley, Japan, and Pakistan.</h3>
-			</header>
-			<div class="flex flex-4">
-				<article>
-					<div class="image collab">
-						<a href="https://responselab.stanford.edu/" target="_blank">
-							<img src="images/stanford-covid-logo.png" alt="Stanford COVID Response Lab" />
-						</a>
-					</div>
-				</article>
-
-				<article>
-					<div class="image collab">
-						<a href="http://dicefoundation.org/" target="_blank">
-							<img src="images/dice.jpg" alt="DICE Foundation" />
-						</a>
-					</div>
-				</article>
-				<article>
-					<div class="image collab">
-						<a href="https://www.duhs.edu.pk/" target="_blank">
-							<img src="images/duhs.png" alt="DUHS">
-						</a>
-					</div>
-				</article>
-				<article>
-					<div class="image collab">
-						<a href="https://www.neduet.edu.pk/" target="_blank">
-							<img src="images/NEDUET.png" alt="NEDUET" />
-						</a>
-					</div>
-				</article>
-				<article>
-					<div class="image collab">
-						<a href="https://ssuet.edu.pk/" target="_blank">
-							<img src="images/SSUET.jpg" alt="SSUET" />
-						</a>
-					</div>
-				</article>
-				<article>
-					<div class="image collab">
-						<a href="https://www.alpas.com.np/" target="_blank">
-							<img src="images/alpas-logo.png" alt="Alpas logo" />
-						</a>
-					</div>
-				</article>
-				<article>
-					<div class="image collab">
-						<a href="https://jig.jp/" target="_blank">
-							<img src="images/jig-logo.png" alt="Jig.jp logo" />
-						</a>
-					</div>
-				</article>
-				<article>
-					<div class="image collab">
-						<a href = "http://habib.edu.pk/" target="_blank">
-							<img src="images/habib-logo.jpg" alt = "Habib University" />
-						</a>
-					</div>
-				</article>
-			</div>
-		</div>
-	</section>
 
 	<!--Where we are so far-->
 	<section class="align-center">
