--- a/team.html
+++ b/team.html
@@ -59,19 +59,16 @@
 		<div class="inner">
 			<header>
 				<h1>Our Team</h1>
-				<h1 style="font-size: 1em;">A global team of passionate scientists.</h1>
 			</header>
 		</div>
 	</section>
 
 
-	<!--Core team-->
 	<section class="wrapper align-center">
 		<div class="inner">
 			<h3>
 				Core Team
 			</h3>
-
 			<!-- Within this div, two member cards placed laterally, will wrap to column
 				in mobile devices -->
 			<div class="flex flex-2">
@@ -86,7 +83,9 @@
 						<h4>Co-Founder</h4>
 					</header>
 					<p>
-						Silicon Valley, USA<br>
+						One Young World Peace Ambassador<br>
+						Computer Science B.A., UC Berkeley
+						<br>
 					</p>
 					<footer>
 						<a href="https://github.com/amilkh" target="_blank" class="fa fa-github fa-2x contact-icon"></a>
@@ -105,7 +104,8 @@
 						<h4>Co-Founder</h4>
 					</header>
 					<p>
-						Silicon Valley, USA
+						President, Science Book Club<br>
+						Operations Research M.S., Stanford University
 					</p>
 					<footer>
 						<a href="https://www.linkedin.com/in/mike-zaidi-423a1221" target="_blank"
@@ -113,90 +113,6 @@
 					</footer>
 				</article>
 
-				<!-- Furqan Ali -->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/furqan-ali.jpg" alt="Furqan Ali">
-					</div>
-					<header>
-						<h3>Furqan Ali</h3>
-						<h4>Team Lead/AI Engineer</h4>
-					</header>
-					<p>
-						Sir Syed UET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="http://github.com/furqan4545" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://pk.linkedin.com/in/furqan-ali-06634a192" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!-- Moona Kanwal -->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/moona.jpg" alt="Moona Kanwal">
-					</div>
-					<header>
-						<h3>Moona Kanwal</h3>
-						<h4>Research Advisor</h4>
-					</header>
-					<p>
-						Assistant Professor
-						<br>Sir Syed UET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://ca.linkedin.com/in/moona-kanwal-335b678" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!-- Muhammad Hasham -->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/hasham.jpg" alt="Muhammd Hasham">
-					</div>
-					<header>
-						<h3>Muhammad Hasham</h3>
-						<h4>Front-end Dev/AI Engineer</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/Muhammad-Hasham-Khalid" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/hashamk" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!-- Midha Tahir -->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/midha.jpg" alt="Midha Tahir">
-					</div>
-					<header>
-						<h3>Midha Tahir</h3>
-						<h4>Data Analyst</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan</br>
-					</p>
-					<footer>
-						<a href="https://github.com/MidhaTahir" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://pk.linkedin.com/in/midhatahir1999" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!-- Nikki Perez -->
 				<article class="team-card">
 					<div class="image round">
 						<img src="images/team/nicole.jpg" alt="Nikki Perez">
@@ -207,8 +123,7 @@
 					</header>
 					<p>
 						Clinical Operations Manager
-						<br>LiveMetric S.A.
-						<br>Luxembourg</br>
+						<br>LiveMetric S.A., Luxembourg
 					</p>
 					<footer>
 						<a href="https://www.linkedin.com/in/nicole-perez6" target="_blank"
@@ -216,175 +131,29 @@
 					</footer>
 				</article>
 
-				<!-- Lisa Chionis -->
 				<article class="team-card">
 					<div class="image round">
 						<img src="images/team/lisa.jpg" alt="Lisa Chionis">
 					</div>
 					<header>
 						<h3>Lisa Chionis</h3>
-						<h4>Grant Proposal Lead</h4>
+						<h4>Medical Writing Lead</h4>
 					</header>
 					<p>
-						BA Global Health (2019)
-						<br>Washington University in St. Louis; MD expected 2024<br>
+						BA Global Health (2019), MD (expected 2024)<br>
+						Washington University in St. Louis<br>
 					</p>
 					<footer>
 						<a href="https://www.linkedin.com/in/lisachionis" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
-
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/asad.jpg" alt="Muhammad Asadullah">
-					</div>
-					<header>
-						<h3>Muhammad Asadullah</h3>
-						<h4>AI Engineer</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/Asadullah007" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/muhammad-asadullah-30872a159/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/naufil.jpg" alt="Muhammad Naufil">
-					</div>
-					<header>
-						<h3>Muhammad Naufil</h3>
-						<h4>AI Engineer</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/mnauf" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/mnauf/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/zayyan.jpg" alt="Zayyan Usmani">
-					</div>
-					<header>
-						<h3>Zayyan Usmani</h3>
-						<h4>Mobile App Developer</h4>
-					</header>
-					<p>
-						Sir Syed UET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/zayyan-usmani-34275b1a6/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!--Usama Altaf Zahid-->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/usama.jpg" alt="Usama Altaf Zahid">
-					</div>
-					<header>
-						<h3>Usama Altaf Zahid</h3>
-						<h4>Signal Processing/AI Engineer</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/Usama3059" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/usama-altaf-zahid-b9612b178/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!--Husun Shujaat-->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/blank.png" alt="Husun Shujaat">
-					</div>
-					<header>
-						<h3>Husun Shujaat</h3>
-						<h4>Data Analyst</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/shujaatHusn" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/husun-shujaat-a00680158/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!--Saad Siddiqui-->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/blank.png" alt="Saad Siddiqui">
-					</div>
-					<header>
-						<h3>Saad Siddiqui</h3>
-						<h4>Front-end Dev/AI Engineer</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/SMS-NED16" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/sms-ned16/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-
-				<!--Tauqeer Ali Khan-->
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/tauqeer.jpg" alt="Tauqeer Ali Khan">
-					</div>
-					<header>
-						<h3>Tauqeer Ali Khan</h3>
-						<h4>Data Preprocessing</h4>
-					</header>
-					<p>
-						NEDUET
-						<br>Karachi, Pakistan
-					</p>
-					<footer>
-						<a href="https://github.com/Tauqeer26" target="_blank"
-							class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/tauqeer-ali-khan-71a343174/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
-			</div>
 	</section>
 
-	<!--Core team-->
 	<section class="wrapper align-center">
 		<div class="inner">
 			<h3>
-				Advisors
+				Advisory
 			</h3>
 
 			<!-- Within this div, two member cards placed laterally, will wrap to column
@@ -420,9 +189,8 @@
 						<h4>Medical Advisor</h4>
 					</header>
 					<p>
-						Assistant Professor - Infectious Diseases
-						<br>Dow University of Health Sciences
-						<br>Karachi, Pakistan</br>
+						Assistant Professor, Infectious Diseases
+						<br>Dow University of Health Sciences, Pakistan
 					</p>
 					<footer>
 						<a href="https://pk.linkedin.com/in/shobha-luxmi-0a717b44" target="_blank"
@@ -437,7 +205,7 @@
 					</div>
 					<header>
 						<h3>Taisuke Fukuno</h3>
-						<h4>Japan localization</h4>
+						<h4>Japan Localization</h4>
 					</header>
 					<p>
 						Founder & Chairman - jig.jp
@@ -468,26 +236,81 @@
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
-				
-				<article class="team-card">
-					<div class="image round">
-						<img src="images/team/chandan.jpg" alt="Chandan Chaurasia">
-					</div>
-					<header>
-						<h3>Chandan Chaurasia</h3>
-						<h4>Marketing and Content Design</h4>
-					</header>
-					<p>
-						Advisor - Alpas Technology
-						<br>Kathmandu, Nepal
-					</p>
-					<footer>
-						<a href="https://www.linkedin.com/in/chaurasia/" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
-					</footer>
-				</article>
 			</div>
 	</section>
+	
+	<section class="wrapper align-center">
+		<div class="inner">
+			<h3>
+				Academic Collaboration
+			</h3>
+				<div class="flex flex-4">
+					<article>
+						<div class="image collab">
+							<a href="https://responselab.stanford.edu/" target="_blank">
+								<img src="images/stanford-covid-logo.png" alt="Stanford COVID Response Lab" />
+							</a>
+						</div>
+					</article>
+					<article>
+						<div class="image collab">
+							<a href="https://www.duhs.edu.pk/" target="_blank">
+								<img src="images/duhs.png" alt="DUHS">
+							</a>
+						</div>
+					</article>
+					<article>
+						<div class="image collab">
+							<a href="https://www.neduet.edu.pk/" target="_blank">
+								<img src="images/NEDUET.png" alt="NEDUET" />
+							</a>
+						</div>
+					</article>
+					<article>
+						<div class="image collab">
+							<a href="https://ssuet.edu.pk/" target="_blank">
+								<img src="images/SSUET.jpg" alt="SSUET" />
+							</a>
+						</div>
+					</article>
+					<article>
+						<div class="image collab">
+							<a href = "http://habib.edu.pk/" target="_blank">
+								<img src="images/habib-logo.jpg" alt = "Habib University" />
+							</a>
+						</div>
+					</article>
+				</div>
+</section>
+<section class="wrapper align-center">
+	<div class="inner">
+		<h3>
+			Industry Collaboration
+		</h3>
+			<div class="flex flex-4">
+				<article>
+					<div class="image collab">
+						<a href="http://dicefoundation.org/" target="_blank">
+							<img src="images/dice.jpg" alt="DICE Foundation" />
+						</a>
+					</div>
+				</article>
+				<article>
+					<div class="image collab">
+						<a href="https://www.alpas.com.np/" target="_blank">
+							<img src="images/alpas-logo.png" alt="Alpas logo" />
+						</a>
+					</div>
+				</article>
+				<article>
+					<div class="image collab">
+						<a href="https://jig.jp/" target="_blank">
+							<img src="images/jig-logo.png" alt="Jig.jp logo" />
+						</a>
+					</div>
+				</article
+			</div>
+</section>
 
 	<!-- Footer -->
 	<footer id="footer">
