--- a/team.html
+++ b/team.html
@@ -244,6 +244,8 @@
 			<h3>
 				Academic Collaboration
 			</h3>
+			
+			<h5>We are supported by faculty from five universities, including <a href="http://med.stanford.edu/" target="_blank" class="green-highlight">Stanford Medicine</a>.</h5>
 				<div class="flex flex-4">
 					<article>
 						<div class="image collab">
