add why it works

--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@
 					3. Eliminated necessity of social distancing and lockdowns
 				</p>
 			</div>
+			
+			<h2 class="green-highlight">
+				Why This Will Work
+			</h2>
+
+			<div class="align-justify">
+				<p>
+					Because COVID-19 affects the throat and lungs of patients, even in early stages, detecting it in early stages from breathing and coughing sounds is feasible.<br>
+					Through analysis of this data, artificial intelligence is able to detect the signatures of COVID-19, even without knowing the inner workings of the actual microbial changes causing it.<br><br>
+					
+					Faculty from Stanford University's Medical and Artificial Intelligence research wings have given us their support and are on our advisory board.<br><br>
+					
+					Additionally, there is a plethora of existing scientific research on using artificial intelligence to detect diseases from respiratory audio signals ([<a href="https://arxiv.org/abs/2003.07434">1</a>]).
+				</p>
+			</div>
 
 			<h2 class="green-highlight">
 				What You Can Expect?
