--- a/team.html
+++ b/team.html
@@ -105,7 +105,8 @@
 					</header>
 					<p>
 						President, Science Book Club<br>
-						Operations Research M.S., Stanford University
+						DICE Foundation<br>
+						Alumni, Stanford University
 					</p>
 					<footer>
 						<a href="https://www.linkedin.com/in/mike-zaidi-423a1221" target="_blank"
