--- a/team.html
+++ b/team.html
@@ -167,7 +167,7 @@
 						<img src="images/team/kara-meister.jpg" alt="Kara Meister">
 					</div>
 					<header>
-						<h3>Dr. Kara Meister</h3>
+						<h3>Dr. Kara Meister, M.D.</h3>
 						<h4>Medical Advisor</h4>
 					</header>
 					<p>
@@ -195,6 +195,39 @@
 					</p>
 					<footer>
 						<a href="https://pk.linkedin.com/in/shobha-luxmi-0a717b44" target="_blank"
+							class="fa fa-linkedin fa-2x contact-icon"></a>
+					</footer>
+				</article>
+				
+				<article class="team-card">
+					<div class="image round">
+						<img src="images/team/hasni.jpg" alt="Dr. Shobha Luxmi">
+					</div>
+					<header>
+						<h3>Dr. Sarfaraz Hasni, M.D.</h3>
+						<h4>Medical Advisor</h4>
+					</header>
+					<p>
+						Director, Lupus Clinical Research Program
+						<br>National Institute of Health (NIH)
+					</p>
+					<footer>
+						<a href="https://www.niams.nih.gov/about/directory/sarfaraz-hasni-md" target="_blank"
+							class="fa fa-linkedin fa-2x contact-icon"></a>
+					</footer>
+				</article>
+				
+				<article class="team-card">
+					<header>
+						<h3>Dr. Gabriel Blaj</h3>
+						<h4>AI Signal Analysis Advisor</h4>
+					</header>
+					<p>
+						Staff Physicist, Stanford University
+						<br>SLAC National Accelerator Laboratory
+					</p>
+					<footer>
+						<a href="https://www.linkedin.com/in/gblaj/" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
