--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 
 			<div class="align-justify">
 				<p>
-					Because COVID-19 affects the throat and lungs of patients, even in early stages, detecting it in early stages from breathing and coughing sounds is feasible.<br>
-					Through analysis of this data, artificial intelligence is able to detect the signatures of COVID-19, even without knowing the inner workings of the actual microbial changes causing it.<br><br>
+					Because COVID-19 affects the throat and lungs of patients, even in early stages, detecting it in early stages from breathing and coughing sounds is feasible. Through analysis of this data, artificial intelligence is able to detect the signatures of COVID-19, even without knowing the inner workings of the actual microbial changes causing it.<br><br>
 					
 					Faculty from Stanford University's Medical and Artificial Intelligence research wings have given us their support and are on our advisory board.<br><br>
 					
