--- a/join.html
+++ b/join.html
@@ -116,7 +116,7 @@
     <section class="end inner">
         <p>Please contact us if you'd like to volunteer!</p>
         <ul class="actions">
-            <li><a href="mailto:join@virufy.org" class="button">Contact Us</a></li>
+			<li><a href="https://forms.gle/pi8ZZ27rFADxNaP77" class="button" target="_blank">Join Virufy</a></li>
         </ul>
     </section>
 	<!-- Footer -->
