--- a/join.html
+++ b/join.html
@@ -125,19 +125,19 @@
 			<!-- GitHub and other icons -->
 			<div class="footer-icons" id="contact">
 				<a href="https://github.com/virufy" target="_blank">
-					<i class="icon fa-github fa-3x"></i>
-				</a>
+					<i class="icon fa-github fa-2x"></i>
+				</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="https://www.linkedin.com/company/virufy/" target="_blank">
-					<i class="icon fab fa-linkedin-in fa-3x"></i>
-				</a>
+					<i class="icon fab fa-linkedin-in fa-2x"></i>
+				</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="https://twitter.com/VirufyOrg" target="_blank">
-					<i class="icon fa-twitter fa-3x"></i>
-				</a>
+					<i class="icon fa-twitter fa-2x"></i>
+				</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="https://www.facebook.com/Virufy/" target="_blank">
-					<i class="icon fab fa-facebook-f fa-3x"></i>
-				</a>
+					<i class="icon fab fa-facebook-f fa-2x"></i>
+				</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="mailto:info@virufy.org">
-					<i class="fas fa-envelope fa-3x"></i>
+					<i class="fas fa-envelope fa-2x"></i>
 				</a>
 			</div>
 
