--- a/join.html
+++ b/join.html
@@ -89,6 +89,17 @@
 					<p>Medical in nature, our product has many potential legal ramifications we must consider. We need advice from qualified professionals, especially those with expertise in data privacy, HIPAA, medtech, error-rate liabilities, and global policy.</p>
 			</div>
 		</div>
+		
+		<div class="myrow">
+			<div class="col col2">
+					<h2 style="font-weight: bold;">Clinical Research Coordinator (CRC)</h2>
+					<p>Seeking individuals to support us in coordinating clinical trial activities. The CRC will be involved in preparing research protocols, reporting, informed consent, conduct of research, safeguarding PHI, and any general administrative matters.</p>
+			</div>
+			<div class="col col2">
+					<h2 style="font-weight: bold;">Grant Writer</h2>
+					<p>Seeking individuals to support us in researching, writing and coordinating the grant application process and keeping records of donors.</p>
+			</div>
+		</div>
 	</section>
 
 	<section class="wrapper align-center inner">
