--- a/team.html
+++ b/team.html
@@ -200,6 +200,27 @@
 				</article>
 				
 				<article class="team-card">
+					<div class="image round">
+						<img src="images/team/mir.jpg" alt="Mir Imran">
+					</div>
+					<header>
+						<h3>Mir Imran</h3>
+						<h4>Advisor</h4>
+					</header>
+					<p>
+						Chairman & CEO
+						<br>InCube Labs LLC
+					</p>
+					<footer>
+						<a href="https://www.linkedin.com/in/mirimran/" target="_blank"
+							class="fa fa-linkedin fa-2x contact-icon"></a>
+					</footer>
+				</article>
+				
+				<article class="team-card">
+					<div class="image round">
+						<img src="images/team/blank.png" alt="Mir Imran">
+					</div>
 					<header>
 						<h3>Dr. Gabriel Blaj</h3>
 						<h4>AI Signal Analysis Advisor</h4>
