Add UofLahore to academic collaborators

--- a/team.html
+++ b/team.html
@@ -243,8 +243,8 @@
 				Academic Collaboration
 			</h3>
 			
-			<h5>We are supported by faculty from five universities, including <a href="http://med.stanford.edu/" target="_blank" class="green-highlight">Stanford Medicine</a>.</h5>
-				<div class="flex flex-4">
+			<h5>We are supported by faculty from six universities, including <a href="http://med.stanford.edu/" target="_blank" class="green-highlight">Stanford Medicine</a>.</h5>
+				<div class="flex flex-3">
 					<article>
 						<div class="image collab">
 							<a href="https://responselab.stanford.edu/" target="_blank">
@@ -277,6 +277,16 @@
 						<div class="image collab">
 							<a href = "http://habib.edu.pk/" target="_blank">
 								<img src="images/habib-logo.jpg" alt = "Habib University" />
+							</a>
+						</div>
+					</article>
+					<article>
+						<div class="image collab">
+							<a href = "https://www.uol.edu.pk/" target="_blank">
+								<img 
+									id="u-lahore-logo" src="images/u-lahore-logo.png" 
+									alt = "The University of Lahore"
+								/>
 							</a>
 						</div>
 					</article>
