Add missing alt tags for images

--- a/goals.html
+++ b/goals.html
@@ -38,7 +38,7 @@
     <header id="header">
         <div class="inner">
             <a href="index.html" class="logo">
-                <img src="images/logo.png">
+                <img src="images/logo.png" alt="Virufy Logo">
             </a>
             <nav id="nav">
                 <a href="index.html">Home</a>
@@ -65,7 +65,7 @@
 
     <section class="wrapper align-center">
         <div class="inner">
-            <img src="images/goals.png" class="virufy-image" id="goals">
+            <img src="images/goals.png" class="virufy-image" id="goals" alt="Virufy's Goals">
         </div>
     </section>
 
