--- a/team.html
+++ b/team.html
@@ -37,7 +37,7 @@
 	<header id="header">
 		<div class="inner">
 			<a href="index.html" class="logo">
-				<img src="images/logo.png">
+				<img src="images/logo.png" alt="Virufy Logo">
 			</a>
 			<nav id="nav">
 				<a href="index.html">Home</a>
@@ -219,7 +219,7 @@
 				
 				<article class="team-card">
 					<div class="image round">
-						<img src="images/team/blank.png" alt="Mir Imran">
+						<img src="images/team/blank.png" alt="Dr. Gabriel Blaj">
 					</div>
 					<header>
 						<h3>Dr. Gabriel Blaj</h3>
