Fix Linter errors on data page

--- a/data.html
+++ b/data.html
@@ -90,12 +90,12 @@
 			</p>
 		</div>
 
-		<div id="contact">
+		<div id="data-contact">
 			<h2 class="green-highlight">Collaboration</h2>
 			<p>
 				We warmly welcome review of our data and code. We hope to create a community of researchers driven to use this data to create solutions for the pandemic. 
 				Please email us at <a href="mailto:open-data@virufy.org" class="green-highlight">open-data@virufy.org</a> if you are interested.
-			</h2>
+			</p>
 		</div>
 	</section>
 	
