Fix linter errors on team page

--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
 
   gtag('config', 'UA-165690517-1');
 </script>
-
+</head>
 <body>
 
 	<!-- Header -->
@@ -149,6 +149,8 @@
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
+			</div>
+		</div>	
 	</section>
 
 	<section class="wrapper align-center">
@@ -235,6 +237,7 @@
 					</footer>
 				</article>
 			</div>
+		</div>
 	</section>
 	
 	<section class="wrapper align-center">
@@ -291,6 +294,7 @@
 						</div>
 					</article>
 				</div>
+		</div>
 </section>
 <section class="wrapper align-center">
 	<div class="inner">
@@ -318,8 +322,9 @@
 							<img src="images/jig-logo.png" alt="Jig.jp logo" />
 						</a>
 					</div>
-				</article
+				</article>
 			</div>
+		</div>
 </section>
 
 	<!-- Footer -->
