--- a/index.html
+++ b/index.html
@@ -242,4 +242,5 @@
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script defer src="https://www.gofundme.com/static/js/embed.js"></script>
+</body>
 </html>
