mention paki students in team

--- a/team.html
+++ b/team.html
@@ -228,7 +228,7 @@
 				Academic Collaboration
 			</h3>
 			
-			<h5>We are supported by faculty from six universities, including <a href="http://med.stanford.edu/" target="_blank" class="green-highlight">Stanford Medicine</a>.</h5>
+			<h5>We are collaborating with six universities, including faculty from <a href="http://med.stanford.edu/" target="_blank" class="green-highlight">Stanford Medicine</a>. Our team includes more than a dozen passionate young AI student engineers from Pakistan's most prestigious institutions.</h5>
 				<div class="flex flex-3">
 					<article>
 						<div class="image collab">
