Remove inline styles

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="inner">
 			<header>
 				<h1>Welcome to <span id="header-virufy-span">VIRUFY</span></h1>
-				<h1 style="font-size: 1em;">Verify your COVID-19 risk with a smartphone!</h1>
+				<h3>Verify your COVID-19 risk with a smartphone!</h3>
 			</header>
 
 			<div class="flex">
@@ -168,24 +168,23 @@
 				</div>
 
 				<!-- Social Icons -->
-				<!-- TODOS: Remove inline styles, configure hrefs to share/follow on click-->
 				<div class="col">
 					<h3>Connect</h3>
 					<div class="footer-icons">
 						
 						<!-- Facebook -->
 						<a href="https://www.facebook.com/Virufy/" target="_blank">
-							<i class="icon fab fa-facebook-f" style="color: #0f8ef2; margin: 0px 20px;"></i>
+							<i id="fb-icon" class="icon fab fa-facebook-f connect-icon"></i>
 						</a>
 
 						<!-- LinkedIn -->
 						<a href="https://www.linkedin.com/company/virufy/" target="_blank">
-							<i class="icon fab fa-linkedin-in" style="color: #0077b5; margin: 0px 20px;"></i>
+							<i id="linkedin-icon" class="icon fab fa-linkedin-in connect-icon"></i>
 						</a>
 						
 						<!-- Twitter -->
 						<a href="https://twitter.com/VirufyOrg" target="_blank">
-							<i class="icon fa-twitter" style="color: #5eaade; margin: 0px 20px;"></i>
+							<i id="twitter-icon" class="icon fa-twitter connect-icon"></i>
 						</a>
 
 					</div>
@@ -193,9 +192,8 @@
 
 				<!-- Join Team -->
 				<div class="col">
-					<!-- <h3>Join</h3> -->
 					<h3>Volunteer</h3>
-					<a class="button" style="margin-top: 5vh" href="./join.html">Join Us</a>
+					<a class="button" href="./join.html">Join Us</a>
 				</div>
 			</div>
 		</div>
