--- a/join.html
+++ b/join.html
@@ -64,46 +64,44 @@
 
 
 	<section class="wrapper align-center inner">
-		<!-- This is to match the `About Us` section on the main page
-		It has a custom style that sets font size to 48px -->
-		<h1 style="font-size: 48px">Who We Need</h1>
+		<h1 class="big-h1">Who We Need</h1>
 
 		<div class="myrow">
 			<div class="col col2">
-				<h2 style="font-weight: bold;">Marketing Expert</h2>
+				<h2 class="bold">Marketing Expert</h2>
 				<p>We're in need of an individual experienced in global outreach, especially for nonprofits and fundraising, to mentor our students on devising a social media outreach plan using various platforms (LinkedIn, Twitter, Facebook). </p>
 			</div>
 			<div class="col col2">
-				<h2 style="font-weight: bold;">Content Designer</h2>
+				<h2 class="bold">Content Designer</h2>
 				<p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
 			</div>
 		</div>
 	
 		<div class="myrow">
 			<div class="col col2">
-					<h2 style="font-weight: bold;">AI Engineers and Mentors</h2>
+					<h2 class="bold">AI Engineers and Mentors</h2>
 					<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
 			</div>
 			<div class="col col2">
-					<h2 style="font-weight: bold;">Legal Advisors</h2>
+					<h2 class="bold">Legal Advisors</h2>
 					<p>Medical in nature, our product has many potential legal ramifications we must consider. We need advice from qualified professionals, especially those with expertise in data privacy, HIPAA, medtech, error-rate liabilities, and global policy.</p>
 			</div>
 		</div>
 		
 		<div class="myrow">
 			<div class="col col2">
-					<h2 style="font-weight: bold;">Clinical Research Coordinator (CRC)</h2>
+					<h2 class="bold">Clinical Research Coordinator (CRC)</h2>
 					<p>Seeking individuals to support us in coordinating clinical trial activities. The CRC will be involved in preparing research protocols, reporting, informed consent, conduct of research, safeguarding PHI, and any general administrative matters.</p>
 			</div>
 			<div class="col col2">
-					<h2 style="font-weight: bold;">Grant Writer</h2>
+					<h2 class="bold">Grant Writer</h2>
 					<p>Seeking individuals to support us in researching, writing and coordinating the grant application process and keeping records of donors.</p>
 			</div>
 		</div>
 	</section>
 
 	<section class="wrapper align-center inner">
-		<h1 style="font-size: 48px">How We Operate</h1>
+		<h1 class="big-h1">How We Operate</h1>
 
 		<div class="myrow">
 			<div class="col">     
