Add Person schema props to team page

--- a/team.html
+++ b/team.html
@@ -73,79 +73,83 @@
 				in mobile devices -->
 			<div class="flex flex-2">
 
-				<!-- Amil Khanzada -->
-				<article class="team-card">
+				<article class="team-card" itemscope itemtype="https://schema.org/Person">
 					<div class="image round">
-						<img src="images/team/amil.jpg" alt="Amil Khanzada">
+						<img src="images/team/amil.jpg" alt="Amil Khanzada" itemprop="image">
 					</div>
 					<header>
-						<h3>Amil Khanzada</h3>
-						<h4>Co-Founder</h4>
+						<h3 itemprop="name">Amil Khanzada</h3>
+						<h4 itemprop="jobTitle">Co-Founder</h4>
 					</header>
 					<p>
-						One Young World Peace Ambassador<br>
-						Computer Science B.A., UC Berkeley
+						<span itemprop="affiliation">One Young World</span>Peace Ambassador<br>
+						<span itemprop="hasCredential">Computer Science B.A.</span>,
+						<span itemprop="alumniOf">UC Berkeley</span>
 						<br>
 					</p>
 					<footer>
-						<a href="https://github.com/amilkh" target="_blank" class="fa fa-github fa-2x contact-icon"></a>
-						<a href="https://www.linkedin.com/in/amilkhanzada" target="_blank"
+						<a itemprop="url" href="https://github.com/amilkh" target="_blank" class="fa fa-github fa-2x contact-icon"></a>
+						<a itemprop="url" href="https://www.linkedin.com/in/amilkhanzada" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
 
-				<!-- Mukhtar Zaidi -->
-				<article class="team-card">
+				<article class="team-card" itemscope itemtype="https://schema.org/Person">
 					<div class="image round">
-						<img src="images/team/mike-zaidi.jpg" alt="Mike Zaidi">
+						<img src="images/team/mike-zaidi.jpg" alt="Mike Zaidi" itemprop="image">
 					</div>
 					<header>
-						<h3>Mike Zaidi</h3>
-						<h4>Co-Founder</h4>
+						<h3 itemprop="name">Mike Zaidi</h3>
+						<h4 itemprop="jobTitle">Co-Founder</h4>
 					</header>
 					<p>
-						President, Science Book Club<br>
-						DICE Foundation<br>
-						Alumni, Stanford University
+						<span itemprop="jobTitle">President</span>, 
+						<span itemprop="affiliation">Science Book Club</span><br>
+						<span itemprop="affiliation">DICE Foundation</span><br>
+						Alumni, <span itemprop="alumniOf">Stanford University</span>
 					</p>
 					<footer>
-						<a href="https://www.linkedin.com/in/mike-zaidi-423a1221" target="_blank"
-							class="fa fa-linkedin fa-2x contact-icon"></a>
+						<a href="https://www.linkedin.com/in/mike-zaidi-423a1221" 
+							target="_blank"
+							class="fa fa-linkedin fa-2x contact-icon"
+							itemprop="url"></a>
 					</footer>
 				</article>
 
-				<article class="team-card">
+				<article class="team-card" itemscope itemtype="https://schema.org/Person">
 					<div class="image round">
-						<img src="images/team/nicole.jpg" alt="Nikki Perez">
+						<img src="images/team/nicole.jpg" alt="Nikki Perez" itemprop="image">
 					</div>
 					<header>
-						<h3>Nikki Perez</h3>
-						<h4>Clinical Research Lead</h4>
+						<h3 itemprop="name">Nikki Perez</h3>
+						<h4 itemprop="jobTitle">Clinical Research Lead</h4>
 					</header>
 					<p>
 						Clinical Operations Manager
-						<br>LiveMetric S.A., Luxembourg
+						<br><span itemprop="affiliation">LiveMetric S.A.</span>, 
+						<span itemprop="workLocation">Luxembourg</span>
 					</p>
 					<footer>
-						<a href="https://www.linkedin.com/in/nicole-perez6" target="_blank"
+						<a itemprop="url" href="https://www.linkedin.com/in/nicole-perez6" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
 
-				<article class="team-card">
+				<article class="team-card" itemscope itemtype="https://schema.org/Person">
 					<div class="image round">
-						<img src="images/team/lisa.jpg" alt="Lisa Chionis">
+						<img src="images/team/lisa.jpg" alt="Lisa Chionis" itemprop="image">
 					</div>
 					<header>
-						<h3>Lisa Chionis</h3>
-						<h4>Medical Writing Lead</h4>
+						<h3 itemprop="name">Lisa Chionis</h3>
+						<h4 itemprop="jobTitle">Medical Writing Lead</h4>
 					</header>
 					<p>
-						BA Global Health (2019), MD (expected 2024)<br>
-						Washington University in St. Louis<br>
+						<span itemprop="hasCredential">BA Global Health (2019)</span>, 
+						<span itemprop="hasCredential">MD (expected 2024)</span><br>
+						<span itemprop="alumniOf">Washington University in St. Louis</span><br>
 					</p>
 					<footer>
-						<a href="https://www.linkedin.com/in/lisachionis" target="_blank"
+						<a itemprop="url" href="https://www.linkedin.com/in/lisachionis" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
@@ -163,37 +167,36 @@
 				in mobile devices -->
 			<div class="flex flex-2">
 
-				<!-- Kara Meister -->
-				<article class="team-card">
+				<article class="team-card" itemscope itemtype="https://schema.org/Person">
 					<div class="image round">
-						<img src="images/team/kara-meister.jpg" alt="Kara Meister">
+						<img src="images/team/kara-meister.jpg" alt="Kara Meister" itemprop="image">
 					</div>
 					<header>
-						<h3>Dr. Kara Meister, M.D.</h3>
-						<h4>Medical Advisor</h4>
+						<h3 itemprop="name"><span itemprop="honorificPrefix">Dr.</span> Kara Meister, <span itemprop="honorificSuffix">M.D.</span></h3>
+						<h4 itemprop="jobTitle">Medical Advisor</h4>
 					</header>
 					<p>
-						Clinical Assistant Professor, Otolaryngology
-						<br>Stanford School of Medicine
+						<span itemprop="jobTitle">Clinical Assistant Professor, Otolaryngology</span><br>
+						<span itemprop="worksFor">Stanford School of Medicine</span>
 					</p>
 					<footer>
-						<a href="https://www.linkedin.com/in/kara-meister-200335110/" target="_blank"
+						<a itemprop="url" href="https://www.linkedin.com/in/kara-meister-200335110/" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
 
-				<!-- Shobha Luxmi -->
-				<article class="team-card">
+				<article class="team-card" itemscope itemtype="https://schema.org/Person">
 					<div class="image round">
-						<img src="images/team/shobha-luxmi.jpg" alt="Dr. Shobha Luxmi">
+						<img src="images/team/shobha-luxmi.jpg" alt="Dr. Shobha Luxmi" itemprop="image">
 					</div>
 					<header>
-						<h3>Dr. Shobha Luxmi</h3>
-						<h4>Medical Advisor</h4>
+						<h3 itemprop="name"><span itemprop="honorificPrefix">Dr.</span> Shobha Luxmi</h3>
+						<h4 itemprop="jobTitle">Medical Advisor</h4>
 					</header>
 					<p>
-						Assistant Professor, Infectious Diseases
-						<br>Dow University of Health Sciences, Pakistan
+						<span itemprop="jobTitle">Assistant Professor, Infectious Diseases</span><br>
+						<span itemprop="worksFor">Dow University of Health Sciences</span>, 
+						<span itemprop="workLocation">Pakistan</span>
 					</p>
 					<footer>
 						<a href="https://pk.linkedin.com/in/shobha-luxmi-0a717b44" target="_blank"
@@ -201,20 +204,20 @@
 					</footer>
 				</article>
 				
-				<article class="team-card">
+				<article class="team-card" itemscope itemtype="https://schema.org/Person">
 					<div class="image round">
-						<img src="images/team/mir.jpg" alt="Mir Imran">
+						<img src="images/team/mir.jpg" alt="Mir Imran" itemprop="image">
 					</div>
 					<header>
-						<h3>Mir Imran</h3>
-						<h4>Advisor</h4>
+						<h3 itemprop="name">Mir Imran</h3>
+						<h4 itemprop="jobTitle">Advisor</h4>
 					</header>
 					<p>
-						Chairman & CEO
-						<br>InCube Labs LLC
+						<span itemprop="jobTitle">Chairman & CEO</span><br>
+						<span itemprop="affiliation">InCube Labs LLC</span>
 					</p>
 					<footer>
-						<a href="https://www.linkedin.com/in/mirimran/" target="_blank"
+						<a itemprop="url" href="https://www.linkedin.com/in/mirimran/" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
